--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h1>Pitch Tracker</h1>
     <div id="totalPitches">Total Pitches: 0</div>
     <div id="currentCount">Current Count: 0-0</div>
+    <div id="strikePercentage">Strike %: 0</div>
     <div id="raceWins">Race Wins: 0</div>
     <button id="strikeBtn">Strike</button>
     <button id="ballBtn">Ball</button>
