--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div id="modeSelection">
     <button id="bullpenModeBtn">Bullpen Mode</button>
     <button id="liveBPModeBtn">Live BP Mode</button>
+    <button id="undoBtn" style="background-color: red; color: white;">UNDO</button>
   </div>
 
   <div id="bullpenMode" style="display:none;">
@@ -61,6 +62,7 @@
       <button class="btn" id="groundball">Groundball</button>
       <button class="btn" id="flyball">FlyBall</button>
       <button class="btn" id="linedrive">LineDrive</button>
+
     </div>
 
     <!-- Pitch Log Summary -->
@@ -71,6 +73,7 @@
       <ul id="pitchLog"></ul>
     </div>
   </div>
+
 
   <script src="script.js"></script>
 </body>
