--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
     <!-- Pitch Log Summary -->
     <div id="pitchLogSummary">
       <h3>Pitch Log</h3>
-      <div id="totalPitchesLiveBP">Total Pitches: 0</div> <!-- Ensure unique ID for Total Pitches in Live BP mode -->
-      <div id="currentCountLiveBP">Current Count: 0-0</div> <!-- Ensure unique ID for Current Count in Live BP mode -->
+      <div id="totalPitchesLiveBP">Total Pitches: 0</div> 
+      <div id="currentCountLiveBP">Current Count: 0-0</div> 
+      <div id="raceWinsLiveBP">Race Wins: </div> 
+      <div id="strikePercentageLiveBP">Strike %: 0</div>
       <ul id="pitchLog"></ul>
     </div>
   </div>
