--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
       <div id="currentCountLiveBP">Current Count: 0-0</div> 
       <div id="raceWinsLiveBP">Race Wins: </div> 
       <div id="strikePercentageLiveBP">Strike %: 0</div>
-      <ul id="pitchLog"></ul>
-    </div>
+      <ul id="pitchLog"></ul></div>
+      <button id="exportBtn" style="margin-top: 20px;">Export Stats</button>
+    
   </div>
 
 
