--- a/index.html
+++ b/index.html
@@ -55,6 +55,40 @@
       <button class="btn" id="splitter">SP</button>
     </div>
 
+    <!-- Pitch Location Selection -->
+    <div id="pitchLocationSelection" style="display:none;">
+      <h3>Select Pitch Location</h3>
+      <div id="pitchLocationContainer" style="display: flex; justify-content: center;">
+        <div id="pitchLocationGrid" style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 1px; justify-items: center;">
+        <!-- Generating 25 buttons for selecting pitch location -->
+        <button class="locationBtn" id="location-1">10</button>
+        <button class="locationBtn" id="location-2">11</button>
+        <button class="locationBtn" id="location-3">12</button>
+        <button class="locationBtn" id="location-4">13</button>
+        <button class="locationBtn" id="location-5">14</button>
+        <button class="locationBtn" id="location-6">15</button>
+        <button class="locationBtn" id="location-7">1</button>
+        <button class="locationBtn" id="location-8">2</button>
+        <button class="locationBtn" id="location-9">3</button>
+        <button class="locationBtn" id="location-10">16</button>
+        <button class="locationBtn" id="location-11">17</button>
+        <button class="locationBtn" id="location-12">4</button>
+        <button class="locationBtn" id="location-13">5</button>
+        <button class="locationBtn" id="location-14">6</button>
+        <button class="locationBtn" id="location-15">18</button>
+        <button class="locationBtn" id="location-16">19</button>
+        <button class="locationBtn" id="location-17">7</button>
+        <button class="locationBtn" id="location-18">8</button>
+        <button class="locationBtn" id="location-19">9</button>
+        <button class="locationBtn" id="location-20">20</button>
+        <button class="locationBtn" id="location-21">21</button>
+        <button class="locationBtn" id="location-22">22</button>
+        <button class="locationBtn" id="location-23">23</button>
+        <button class="locationBtn" id="location-24">24</button>
+        <button class="locationBtn" id="location-25">25</button>
+    </div>
+  </div>
+</div>
     <!-- Outcome Selection -->
     <div id="outcomeSelection" style="display:none;">
       <h3>Select Outcome</h3>
