--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <!-- Combo Pitch Type Selection -->
     <div id="comboPitchTypeSelection" style="display: none;">
-      <h3>Select Combo Pitch Types</h3>
+      <h3>Select Pitch Type Goal</h3>
       <button class="comboPitchTypeBtn" id="combo-fourSeam">4S</button>
       <button class="comboPitchTypeBtn" id="combo-twoSeam">2S</button>
       <button class="comboPitchTypeBtn" id="combo-cutter">CT</button>
