--- a/index.html
+++ b/index.html
@@ -108,6 +108,43 @@
     </div>
   </div>
 </div>
+
+<!-- Heatmap Grid -->
+<div id="heatmapGrid" style="display:none;">
+  <h3>Heat Map</h3>
+  <div id="heatmapContainer" style="display: flex; justify-content: center;">
+    <div id="heatmap" style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 1px; justify-items: center;">
+      <!-- Generating 25 buttons for the heatmap -->
+      <!-- Use the same numbering and layout as the pitch location grid -->
+      <button class="heatmapBtn" id="heatmap-1">10</button>
+      <button class="heatmapBtn" id="heatmap-2">11</button>
+      <button class="heatmapBtn" id="heatmap-3">12</button>
+      <button class="heatmapBtn" id="heatmap-4">13</button>
+      <button class="heatmapBtn" id="heatmap-5">14</button>
+      <button class="heatmapBtn" id="heatmap-6">15</button>
+      <button class="heatmapBtn" id="heatmap-7">1</button>
+      <button class="heatmapBtn" id="heatmap-8">2</button>
+      <button class="heatmapBtn" id="heatmap-9">3</button>
+      <button class="heatmapBtn" id="heatmap-10">16</button>
+      <button class="heatmapBtn" id="heatmap-11">17</button>
+      <button class="heatmapBtn" id="heatmap-12">4</button>
+      <button class="heatmapBtn" id="heatmap-13">5</button>
+      <button class="heatmapBtn" id="heatmap-14">6</button>
+      <button class="heatmapBtn" id="heatmap-15">18</button>
+      <button class="heatmapBtn" id="heatmap-16">19</button>
+      <button class="heatmapBtn" id="heatmap-17">7</button>
+      <button class="heatmapBtn" id="heatmap-18">8</button>
+      <button class="heatmapBtn" id="heatmap-19">9</button>
+      <button class="heatmapBtn" id="heatmap-20">20</button>
+      <button class="heatmapBtn" id="heatmap-21">21</button>
+      <button class="heatmapBtn" id="heatmap-22">22</button>
+      <button class="heatmapBtn" id="heatmap-23">23</button>
+      <button class="heatmapBtn" id="heatmap-24">24</button>
+      <button class="heatmapBtn" id="heatmap-25">25</button>
+    </div>
+  </div>
+</div>
+
     <!-- Outcome Selection -->
     <div id="outcomeSelection" style="display:none;">
       <h3>Select Outcome</h3>
@@ -137,6 +174,7 @@
       <ul id="pitchLog"></ul>
     </div>
     <button id="exportBtn" style="margin-top: 20px;">Export Stats</button>
+    <button id="heatMapBtn" style="margin-top: 20px;">Heat Map</button>
   </div>
 
   <script src="script.js"></script>
