--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     </div>
     <button id="exportBtn" style="margin-top: 20px;">Export Stats</button>
     <button id="heatMapBtn" style="margin-top: 20px;">Heat Map</button>
+    <button id="nextBatterBtn" style="margin-top: 20px;">NEXT BATTER</button>
   </div>
 
   <script src="script.js"></script>
