--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@
   </div>
 </div>
 
+<div id="taggingOptions" style="display: none;">
+  <h3>Select Tag and Add Note</h3>
+  <div id="flagSelection">
+    <button class="flagBtn" id="flag-check-video">Check Video</button>
+    <button class="flagBtn" id="flag-breakthrough">Breakthrough</button>
+    <button class="flagBtn" id="flag-learning-moment">Learning Moment</button>
+  </div>
+  <textarea id="tagNote" placeholder="Add a note (optional)"></textarea>
+  <button id="applyTagBtn">Apply Tag</button>
+</div>
+
 <!-- Heatmap Grid -->
 <div id="heatmapGrid" style="display:none;">
   <h3>Heat Map</h3>
@@ -175,7 +186,8 @@
     </div>
     <button id="exportBtn" style="margin-top: 20px;">Export Stats</button>
     <button id="heatMapBtn" style="margin-top: 20px;">Heat Map</button>
-    <button id="nextBatterBtn" style="margin-top: 20px;">NEXT BATTER</button>
+    <button id="nextBatterBtn" style="margin-top: 20px;">Next Batter</button>
+    <button id="tagPitchBtn" style="margin-top: 20px;">Tag Pitch</button>
   </div>
 
   <script src="script.js"></script>
