--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div id="pitchLocationSelection" style="display:none;">
       <h3>Select Pitch Location</h3>
       <div id="pitchLocationContainer" style="display: flex; justify-content: center;">
-        <div id="pitchLocationGrid" style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 1px; justify-items: center;">
+        <div id="pitchLocationGrid">
           <!-- Row 1 -->
           <button class="locationBtn nonCompetitiveZone" id="location-26">26</button>
           <button class="locationBtn nonCompetitiveZone" id="location-27">27</button>
@@ -154,7 +154,7 @@
     <div id="heatmapGrid" style="display:none;">
       <h3>Heat Map</h3>
       <div id="heatmapContainer" style="display: flex; justify-content: center;">
-        <div id="heatmap" style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 1px; justify-items: center;">
+        <div id="heatmap">
           <!-- Row 1 -->
           <button class="heatmapBtn nonCompetitiveZone" id="heatmap-26">26</button>
           <button class="heatmapBtn nonCompetitiveZone" id="heatmap-27">27</button>
